# guile-mastodon

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  LICENSE  Makefile.am  README.org  TODO  configure.ac  guix.scm  mastodon.scm  pre-inst-env.in
doc/: api.org  guile-mastodon.org  local.mk
mastodon/: api.scm  instance.scm  types.scm
